<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Complaint">

    <TextView
        android:id="@+id/textView"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="612dp"
        android:text="New Complains"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/myRectangleView"
        android:layout_width="353dp"
        android:layout_height="515dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="157dp"
        android:background="@drawable/rectangle" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="593dp"
        android:text="Date"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dateTextView"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="592dp"
        android:background="@drawable/textview"
        android:hint="@string/inputDate_input"
        android:inputType="date"
        android:textColor="#000000"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/dateButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="341dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="594dp"
        android:src="@drawable/ic_date" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="556dp"
        android:text="Time"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/timeTextView"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="555dp"
        android:background="@drawable/textview"
        android:hint="@string/inputTime_input"
        android:inputType="time"
        android:textColor="#000000"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/timeButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="343dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="557dp"
        android:src="@drawable/ic_time" />

    <TextView
        android:id="@+id/cpfTextView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="519dp"
        android:text="CPF No."
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cpfInputText"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="518dp"
        android:background="@drawable/textview"
        android:hint="@string/cpfInput_input"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="482dp"
        android:text="Name"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="481dp"
        android:background="@drawable/textview"
        android:hint="@string/inputName_input"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/designationTextView"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="445dp"
        android:text="Designation"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputDesignation"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="444dp"
        android:background="@drawable/textview"
        android:hint="@string/inputDesignation_input"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fieldTextView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="408dp"
        android:text="Field"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/choose"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="407dp"
        android:background="@drawable/textview"

        android:textColor="#000000"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinnerFields"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="401dp" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="371dp"
        android:text="Location"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputLocation"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="371dp"
        android:background="@drawable/textview"
        android:hint="@string/inputLocation_input"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/contactTextView"
        android:layout_width="92dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="334dp"
        android:text="Contact No."
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputContact"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="333dp"
        android:background="@drawable/textview"
        android:hint="@string/inputContact_input"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/complainTextView"
        android:layout_width="103dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="274dp"
        android:text="Complain category"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputComplain"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="293dp"
        android:background="@drawable/textview"
        android:hint="@string/inputComplain_input"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/natureTextView"
        android:layout_width="103dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="222dp"
        android:text="Nature of Complain"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputNature"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="226dp"
        android:background="@drawable/textview"
        android:hint="@string/inputNature_input"
        android:text=""
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/bttn"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>